--- a/pom.xml
+++ b/pom.xml
@@ -110,8 +110,7 @@
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
             <version>2.10.9</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/PlaceholderAPI-2.10.9.jar</systemPath>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.spigotmc</groupId>
