--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -82,7 +82,7 @@ items:
         - "&7Right-Click to view all available hub servers!"
 tablist:
   enabled: true
-  slots:
+  left:
     0: ""
     1: ""
     2: ""
@@ -104,63 +104,47 @@ tablist:
     18: ""
     19: ""
     20: ""
-    21: "  &6&lSolexGames"
-    22: "   &7%bungee_global% Players"
-    23: ""
-    24: ""
-    25: ""
-    26: "&6&lSpeed SkyWars"
-    27: "&7%bungee_speedsw%/400"
-    28: ""
-    29: ""
-    30: ""
-    31: ""
-    32: ""
-    33: ""
-    34: "&6&lLobbies"
-    35: "&7%bungee_hub-01%/1200"
-    36: ""
-    37: ""
-    38: ""
-    39: ""
-    40: ""
-    41: ""
-    42: ""
-    43: ""
-    44: ""
-    45: ""
-    46: ""
-    47: "&6&lEvent Cobalt"
-    48: "&7%bungee_event-cobalt%/150"
-    49: ""
-    50: ""
-    51: "&6&lEvent Lithium"
-    52: "&7%bungee_event-lithium%/150"
-    53: ""
-    54: ""
-    55: "&6&l???"
-    56: "&7%bungee_test%/150"
-    57: ""
-    58: ""
-    59: ""
-    60: ""
-    61: ""
-    62: ""
-    63: ""
-    64: ""
-    65: ""
-    66: ""
-    67: ""
-    68: ""
-    69: ""
-    70: ""
-    71: ""
-    72: ""
-    73: ""
-    74: ""
-    75: ""
-    76: ""
-    77: ""
-    78: ""
-    79: ""
-    80: ""
+  center:
+    0: "  &6&lSolexGames"
+    1: "   &7%bungee_global% Players"
+    2: ""
+    3: ""
+    4: ""
+    5: "&6&lSpeed SkyWars"
+    6: "&7%bungee_speedsw%/400"
+    7: ""
+    8: ""
+    9: ""
+    10: ""
+    11: ""
+    12: ""
+    13: "&6&lLobbies"
+    14: "&7%bungee_hub-01%/1200"
+    15: ""
+    16: ""
+    17: ""
+    18: ""
+    19: ""
+    20: ""
+  right:
+    0: ""
+    1: ""
+    2: ""
+    3: ""
+    4: ""
+    5: "&6&lEvent Cobalt"
+    6: "&7%bungee_event-cobalt%/150"
+    7: ""
+    8: ""
+    9: "&6&lEvent Lithium"
+    10: "&7%bungee_event-lithium%/150"
+    11: ""
+    12: ""
+    13: "&6&l???"
+    14: "&7%bungee_test%/150"
+    15: ""
+    16: ""
+    17: ""
+    18: ""
+    19: ""
+    20: ""
