Added a /menu list command for sub menus

--- a/src/main/resources/menus.yml
+++ b/src/main/resources/menus.yml
@@ -35,7 +35,7 @@ server-selector:
   items:
     2:
       display: "&6&lKitPvP"
-      type: "BLAZE_POWDER"
+      type: "BLAZE_POWDER" w
       durability: 0
       unbreakable: false
       action:
