--- a/src/main/resources/menus.yml
+++ b/src/main/resources/menus.yml
@@ -11,7 +11,8 @@ sub-menus:
         unbreakable: false
         action:
           enabled: true
-          string: "joinqueue nigeria"
+          type: "SERVER_SEND" # SERVER_SEND, MENU, COMMAND
+          value: "evnt"
         lore:
           enabled: true
           strings:
@@ -35,12 +36,13 @@ server-selector:
   items:
     2:
       display: "&6&lKitPvP"
-      type: "BLAZE_POWDER" w
+      type: "BLAZE_POWDER"
       durability: 0
       unbreakable: false
       action:
         enabled: true
-        string: "joinqueue kitpvp"
+        type: "SERVER_SEND" # SERVER_SEND, MENU, COMMAND
+        value: "evnt"
       lore:
         enabled: true
         strings:
@@ -61,7 +63,8 @@ server-selector:
       unbreakable: false
       action:
         enabled: true
-        string: "joinqueue na-practice"
+        type: "SERVER_SEND" # SERVER_SEND, MENU, JOIN_QUEUE
+        value: "evnt"
       lore:
         enabled: true
         strings:
@@ -81,8 +84,9 @@ server-selector:
       durability: 15
       unbreakable: false
       action:
-        enabled: false
-        string: "menu events"
+        enabled: true
+        type: "SERVER_SEND" # SERVER_SEND, MENU, COMMAND
+        value: "evnt"
       lore:
         enabled: true
         strings:
