--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -56,7 +56,7 @@ items:
     type: "ENDER_PEARL"
     durability: 0
     unbreakable: false
-    slot: 4
+    slot: 3
     lore:
       enabled: true
       strings:
@@ -66,7 +66,7 @@ items:
     type: "COMPASS"
     durability: 0
     unbreakable: false
-    slot: 0
+    slot: 5
     lore:
       enabled: true
       strings:
@@ -76,11 +76,21 @@ items:
     type: "NETHER_STAR"
     durability: 0
     unbreakable: false
-    slot: 8
+    slot: 7
     lore:
       enabled: true
       strings:
         - "&7Right-Click to view all available hub servers!"
+  cosmetics:
+    display: "&6&lCosmetics"
+    type: "ENDER_CHEST"
+    durability: 0
+    unbreakable: false
+    slot: 7
+    lore:
+      enabled: true
+      strings:
+        - "&7Right-Click to view all available cosmetics!"
 tablist:
   enabled: true
   left:
