--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -91,6 +91,17 @@ items:
       enabled: true
       strings:
         - "&7Right-Click to view all available cosmetics!"
+  profile:
+    display: "&6&lProfile"
+    # This has to be a skull to work properly.
+    type: "SKULL_ITEM"
+    durability: 3
+    unbreakable: false
+    slot: 1
+    lore:
+      enabled: true
+      strings:
+        - "&7Right-Click to view your in-game profile!"
 tablist:
   enabled: true
   left:
