--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Neon
-version: ${git.commit.id.abbrev}-STABLE
+version: ${git.commit.id.abbrev}
 main: com.solexgames.hub.HubPlugin
 
 load: POSTWORLD
