--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
 
     <groupId>com.solexgames</groupId>
-    <artifactId>Neon</artifactId>
-    <version>1.0-DEV</version>
-    <packaging>jar</packaging>
+    <artifactId>neon</artifactId>
+    <version>LATEST</version>
 
     <properties>
         <java.version>1.8</java.version>
@@ -78,7 +78,7 @@
         </resources>
 
         <!--suppress UnresolvedMavenProperty -->
-        <finalName>Neon-BUILD-${git.commit.id.abbrev}</finalName>
+        <finalName>Neon</finalName>
     </build>
 
     <repositories>
