--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,8 +2,7 @@ name: Neon
 version: ${git.commit.id.abbrev}
 main: com.solexgames.hub.HubPlugin
 
-load: POSTWORLD
-api-version: "1.13"
-
 author: SolexGames
 website: https://www.solexgames.com
+
+depend: [commonlibs-bukkit, Scandium]
